Update website name to GluteniPedia

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CeliacPedia</title>
+  <title>Glutenipedia</title>
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
@@ -36,7 +36,7 @@
     <!-- Nav Bar inspired by BootStrap -->
     <nav class="navbar navbar-expand-lg bg-info">
       <div class="container-fluid">
-        <a class="navbar-brand alegreya-sans-sc-bold" href="#">CeliacPedia</a>
+        <a class="navbar-brand alegreya-sans-sc-bold" href="#">Glutenipedia</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -94,8 +94,9 @@
     <div class="card mb-3 bg-info-subtle">
       <img src="assets/images/gf-1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Gluten Free</h5>
+        <h5 class="card-title">What is Gluten?</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.
           This content is a little bit longer.</p>
       </div>
     </div>
@@ -114,9 +115,9 @@
     <div class="card mb-3 bg-info-subtle">
       <img src="assets/images/Symptoms.webp" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">How to be sure you have Celiac?</h5>
+        <h5 class="card-title">Celiac Diagnose</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.</p>
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.</p>
       </div>
     </div>
 
