--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Nav Bar inspired by BootStrap -->
     <nav class="navbar navbar-expand-lg bg-info">
       <div class="container-fluid">
-        <a class="navbar-brand alegreya-sans-sc-bold" href="#">Glutenipedia</a>
+        <a class="navbar-brand alegreya-sans-sc-bold" href="#">Glutenipediaaaaaa</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
