Add content to home page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Glutenipedia</title>
+  <title>GluteniPedia</title>
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
@@ -30,13 +30,15 @@
 
 <body>
 
+
+
   <!-- Header Section -->
   <header>
-
     <!-- Nav Bar inspired by BootStrap -->
-    <nav class="navbar navbar-expand-lg bg-info">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand alegreya-sans-sc-bold" href="#">Glutenipediaaaaaa</a>
+          <img src="assets/images/logo.png" id="logo-image" alt="logo image beside website name">
+          <a class="navbar-brand alegreya-sans-sc-bold" href="#">GluteniPedia</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -44,7 +46,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#"><strong><u> Home</u></strong></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Recipes</a>
@@ -57,97 +59,98 @@
             <li class="nav-item">
               <a class="nav-link" href="#">SignUp</a>
             </li>
-
-            <!--
-                    <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li>
-
-                 <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                  </li> 
-                -->
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light" type="submit">Search</button>
+            <button class="btn btn-outline-secondary" type="submit">Search</button>
           </form>
         </div>
       </div>
     </nav>
 
-
-    <div class="header-space"></div>
   </header>
 
   <!-- Main Section -->
   <main>
 
-    <div class="card mb-3 bg-info-subtle">
+    <img src="assets/images/family-gathering-to-eat.jpg" id="bg-img" alt="family eating together">
+
+    <div class="card card-light" id="card1">
       <img src="assets/images/gf-1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">What is Gluten?</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+        <h3 class="card-title" id="dark-text">What is Gluten?</h3>
+        <p class="card-text" id="dark-text">This is a wider card with supporting text below as a natural lead-in to additional content.
           This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.
           This content is a little bit longer.</p>
       </div>
     </div>
 
 
-    <div class="card mb-3 bg-info-subtle">
+    <div class="card card-dark" id="card2">
       <img src="assets/images/foodmap.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Food Map</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+        <h3 class="card-title" id="dark-text">Food Map</h3>
+        <p class="card-text" id="dark-text">This is a wider card with supporting text below as a natural lead-in to additional content.
           This content is a little bit longer.</p>
       </div>
     </div>
 
 
-    <div class="card mb-3 bg-info-subtle">
+    <div class="card card-light" id="card3">
       <img src="assets/images/Symptoms.webp" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Celiac Diagnose</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+        <h3 class="card-title" id="dark-text">Celiac Diagnose</h3>
+        <p class="card-text" id="dark-text">This is a wider card with supporting text below as a natural lead-in to additional content.
           This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.</p>
       </div>
     </div>
 
+
+    <div class="card card-dark" id="card4">
+      <div class="card-body">
+        <h3 class="card-title" id="dark-text">How to deal of celiac?</h3>
+        <p class="card-text" id="dark-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+      </div>
+    </div>
 
 
   </main>
 
   <!-- Footer -->
   <footer>
-    <ul id="social-networks">
+    <ul id="footer-bar">
       <li>
-        <a href="#" target="_blank" rel="noopener"
+        <a href="#" rel="noopener"
           aria-label="">
           About</a>
       </li>
 
       <li>
-        <a href="#" target="_blank" rel="noopener"
+        <a href="#"  rel="noopener"
           aria-label="">
           Contact Us</a>
       </li>
 
       <li>
-        <a href="#" target="_blank" rel="noopener"
+        <a href="#"  rel="noopener"
           aria-label="">
           Conditions and Terms</a>
       </li>
 
       <li>
-        <a href="#" target="_blank" rel="noopener"
+        <a href="#" rel="noopener"
           aria-label="">
           Privacy Policy</a>
       </li>
