--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@
     href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
 
-  <!-- Linking CSS Styling -->
-  <link rel="stylesheet" href="assets/css/style.css">
 
   <!-- Linking Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+      <!-- Linking CSS Styling -->
+  <link rel="stylesheet" href="assets/css/style.css">
 
-</head>
 
 <body>
 
@@ -39,31 +38,32 @@
       <div class="container-fluid">
           <img src="assets/images/logo.png" id="logo-image" alt="logo image beside website name">
           <a class="navbar-brand alegreya-sans-sc-bold" href="#">GluteniPedia</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+
+          
+        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </button> -->
+        <input id="menu-button" type="checkbox">
+        <label for="menu-button"><span class="navbar-toggler-icon navbar-toggler"></span></label>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#"><strong><u> Home</u></strong></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Recipes</a>
+              <a class="nav-link" href="recipes.html">Recipes</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Diagnose</a>
+              <a class="nav-link" href="diagnose.html">Diagnose</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">SignUp</a>
+              <a class="nav-link" href="signup.html">SignUp</a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-secondary" type="submit">Search</button>
-          </form>
         </div>
       </div>
     </nav>
@@ -78,8 +78,8 @@
     <div class="card card-light" id="card1">
       <img src="assets/images/gf-1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h3 class="card-title" id="dark-text">What is Gluten?</h3>
-        <p class="card-text" id="dark-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+        <h3 class="card-title dark-text">What is Gluten?</h3>
+        <p class="card-text dark-text">This is a wider card with supporting text below as a natural lead-in to additional content.
           This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.
           This content is a little bit longer.</p>
       </div>
@@ -89,8 +89,8 @@
     <div class="card card-dark" id="card2">
       <img src="assets/images/foodmap.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h3 class="card-title" id="dark-text">Food Map</h3>
-        <p class="card-text" id="dark-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+        <h3 class="card-title dark-text">Food Map</h3>
+        <p class="card-text dark-text">This is a wider card with supporting text below as a natural lead-in to additional content.
           This content is a little bit longer.</p>
       </div>
     </div>
@@ -99,8 +99,8 @@
     <div class="card card-light" id="card3">
       <img src="assets/images/Symptoms.webp" class="card-img-top" alt="...">
       <div class="card-body">
-        <h3 class="card-title" id="dark-text">Celiac Diagnose</h3>
-        <p class="card-text" id="dark-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+        <h3 class="card-title dark-text">Celiac Diagnose</h3>
+        <p class="card-text dark-text">This is a wider card with supporting text below as a natural lead-in to additional content.
           This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.</p>
       </div>
     </div>
@@ -108,8 +108,8 @@
 
     <div class="card card-dark" id="card4">
       <div class="card-body">
-        <h3 class="card-title" id="dark-text">How to deal of celiac?</h3>
-        <p class="card-text" id="dark-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+        <h3 class="card-title dark-text">How to deal of celiac?</h3>
+        <p class="card-text dark-text">This is a wider card with supporting text below as a natural lead-in to additional content.
           This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
           This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
           This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
