--- a/diagnose.html
+++ b/diagnose.html
@@ -56,6 +56,10 @@
             </li>
 
             <li class="nav-item">
+              <a class="nav-link" href="celebrities.html">Celebrities</a>
+            </li>
+            
+            <li class="nav-item">
               <a class="nav-link" href="signup.html">SignUp</a>
             </li>
           </ul>
