--- a/index.html
+++ b/index.html
@@ -23,23 +23,20 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-      <!-- Linking CSS Styling -->
+  <!-- Linking CSS Styling -->
   <link rel="stylesheet" href="assets/css/style.css">
 
 
 <body>
-
-
-
   <!-- Header Section -->
   <header>
     <!-- Nav Bar inspired by BootStrap -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-          <img src="assets/images/logo.png" id="logo-image" alt="logo image beside website name">
-          <a class="navbar-brand alegreya-sans-sc-bold" href="#">GluteniPedia</a>
+        <img src="assets/images/logo.png" id="logo-image" alt="logo image beside website name">
+        <a class="navbar-brand alegreya-sans-sc-bold" href="#">GluteniPedia</a>
 
-          
+
         <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -61,6 +58,10 @@
             </li>
 
             <li class="nav-item">
+              <a class="nav-link" href="celebrities.html">Celebrities</a>
+            </li>
+
+            <li class="nav-item">
               <a class="nav-link" href="signup.html">SignUp</a>
             </li>
           </ul>
@@ -72,15 +73,16 @@
 
   <!-- Main Section -->
   <main>
-
     <img src="assets/images/family-gathering-to-eat.jpg" id="bg-img" alt="family eating together">
 
     <div class="card card-light" id="card1">
       <img src="assets/images/gf-1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h3 class="card-title dark-text">What is Gluten?</h3>
-        <p class="card-text dark-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.
+        <p class="card-text dark-text">This is a wider card with supporting text below as a natural lead-in to
+          additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
+          additional content.
           This content is a little bit longer.</p>
       </div>
     </div>
@@ -90,7 +92,8 @@
       <img src="assets/images/foodmap.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h3 class="card-title dark-text">Food Map</h3>
-        <p class="card-text dark-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+        <p class="card-text dark-text">This is a wider card with supporting text below as a natural lead-in to
+          additional content.
           This content is a little bit longer.</p>
       </div>
     </div>
@@ -100,8 +103,10 @@
       <img src="assets/images/Symptoms.webp" class="card-img-top" alt="...">
       <div class="card-body">
         <h3 class="card-title dark-text">Celiac Diagnose</h3>
-        <p class="card-text dark-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+        <p class="card-text dark-text">This is a wider card with supporting text below as a natural lead-in to
+          additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
+          additional content.</p>
       </div>
     </div>
 
@@ -109,19 +114,32 @@
     <div class="card card-dark" id="card4">
       <div class="card-body">
         <h3 class="card-title dark-text">How to deal of celiac?</h3>
-        <p class="card-text dark-text">This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
-          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+        <p class="card-text dark-text">This is a wider card with supporting text below as a natural lead-in to
+          additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
+          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
+          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
+          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
+          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
+          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
+          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
+          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
+          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
+          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
+          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
+          additional content.This is a wider card with supporting text below as a natural lead-in to additional content.
+          This content is a little bit longer.This is a wider card with supporting text below as a natural lead-in to
+          additional content.</p>
       </div>
     </div>
 
@@ -132,33 +150,29 @@
   <footer>
     <ul id="footer-bar">
       <li>
-        <a href="#" rel="noopener"
-          aria-label="">
+        <a href="#" rel="noopener" aria-label="">
           About</a>
       </li>
 
       <li>
-        <a href="#"  rel="noopener"
-          aria-label="">
+        <a href="#" rel="noopener" aria-label="">
           Contact Us</a>
       </li>
 
       <li>
-        <a href="#"  rel="noopener"
-          aria-label="">
+        <a href="#" rel="noopener" aria-label="">
           Conditions and Terms</a>
       </li>
 
       <li>
-        <a href="#" rel="noopener"
-          aria-label="">
+        <a href="#" rel="noopener" aria-label="">
           Privacy Policy</a>
       </li>
     </ul>
   </footer>
 
-      <!-- Font Awesome kit -->
-      <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
+  <!-- Font Awesome kit -->
+  <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 
 </body>
 
