Add content to  celebrities page

--- a/celebrities.html
+++ b/celebrities.html
@@ -78,77 +78,98 @@
         <div class="card card-light">
             <img src="assets/images/fans.webp" class="card-img-top" alt="...">
             <div class="card-body">
-              <h3 class="card-title dark-text">Celebrities and Public Figures Living Gluten-Free</h3>
-              <p class="card-text dark-text">Living with celiac disease or gluten intolerance can be challenging, but many celebrities
-                and public figures around the world have embraced gluten-free lifestyles and are vocal about their journeys.
-                These individuals have used their platforms to raise awareness about the condition, advocating for better
-                understanding, more accessible gluten-free options, and improved support for those who need to avoid gluten.
-                <br><br>In this section, we highlight some of the well-known figures from various countries—including the
-                United States, the Arab world, Turkey, and India—who have publicly shared their experiences with celiac
-                disease or gluten sensitivity. Their stories not only inspire others who may be struggling with similar
-                issues but also help to spread important messages about health, wellness, and the importance of managing
-                gluten-related disorders.
-                <br><br>Explore their Wikipedia links below to learn more about how they manage their gluten-free lifestyles
-                and continue to thrive in their respective fields.</p>
+                <h3 class="card-title dark-text">Celebrities and Public Figures Living Gluten-Free</h3>
+                <p class="card-text dark-text">Living with celiac disease or gluten intolerance can be challenging, but
+                    many celebrities
+                    and public figures around the world have embraced gluten-free lifestyles and are vocal about their
+                    journeys.
+                    These individuals have used their platforms to raise awareness about the condition, advocating for
+                    better
+                    understanding, more accessible gluten-free options, and improved support for those who need to avoid
+                    gluten.
+                    <br><br>In this section, we highlight some of the well-known figures from various
+                    countries—including the
+                    United States, the Arab world, Turkey, and India—who have publicly shared their experiences with
+                    celiac
+                    disease or gluten sensitivity. Their stories not only inspire others who may be struggling with
+                    similar
+                    issues but also help to spread important messages about health, wellness, and the importance of
+                    managing
+                    gluten-related disorders.
+                    <br><br>Explore their Wikipedia links below to learn more about how they manage their gluten-free
+                    lifestyles
+                    and continue to thrive in their respective fields.
+                </p>
             </div>
-          </div>
-
-          <div class="container overflow-hidden text-center">
-            <div class="row gx-5">
+        </div>
 
 
-                <div class="col">
-                    <div class="p-3">
-                        
-                        <div class="card card-light">
-                            <img src="assets/images/fans.webp" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h3 class="card-title dark-text">Name</h3>
+        <div class="container text-center">
+            <div class="row g-2">
+
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/bill-clinton.jpg" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Bill Clinton</h3>
+                                </div>
                             </div>
-                          </div>
-
-                    </div>
+                        </div>
+                    </a>
                 </div>
 
 
-                <div class="col">
-                    <div class="p-3">
-                        <div class="card card-light">
-                            <img src="assets/images/fans.webp" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h3 class="card-title dark-text">Name</h3>
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/novak-djokovic.webp" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Novak Djokovic</h3>
+                                </div>
                             </div>
-                          </div>
-                    </div>
-                </div>
-
-                <div class="col">
-                    <div class="p-3">
-                        <div class="card card-light">
-                            <img src="assets/images/fans.webp" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h3 class="card-title dark-text">Name</h3>
-                            </div>
-                          </div>
-                    </div>
+                        </div>
+                    </a>
                 </div>
 
 
-                <div class="col">
-                    <div class="p-3">
-                        <div class="card card-light">
-                            <img src="assets/images/fans.webp" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h3 class="card-title dark-text">Name</h3>
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/beren-saat.jpg" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Beren Saat</h3>
+                                </div>
                             </div>
-                          </div>
-                    </div>
+                        </div>
+                    </a>
                 </div>
-                
 
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/fans.webp" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Name</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
 
 
             </div>
+        </div>
+
+
+
+        </div>
         </div>
     </main>
 
@@ -183,6 +204,3 @@
 </body>
 
 </html>
-
-
-
