Add extra content to celebrities page

--- a/celebrities.html
+++ b/celebrities.html
@@ -154,15 +154,281 @@
                     <a href="https://www.Wikipedia.org" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/fans.webp" class="celebrity-img" alt="...">
+                                <img src="assets/images/celebrities/meryem-uzerli.jpg" class="celebrity-img" alt="...">
                                 <div class="card-body">
-                                <h3 class="card-title dark-text">Name</h3>
+                                <h3 class="card-title dark-text">Meryem Uzerli</h3>
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
 
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/justin-trudeau.jpg" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Justin Trudeau</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/sonam-kapoor.jpg" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Sonam Kapoor</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/mike-pence.jpg" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Mike Pence</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/hend-sabry.webp" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Hend Sabry</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/amal-clooney.webp" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Amal Clooney</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/jeb-bush.jpeg" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Jeb Bush</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/victoria-beckham.webp" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Victoria Beckham</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/chelsea-clinton.jpg" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Chelsea Clinton</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/laila-eloui.jpg" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Laila Eloui</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/burcu-esmersoy.jpg" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Burcu Esmersoy</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/nurgül-yeşilçay.webp" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Nurgül Yeşilçay</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/shruti-haasan.jpg" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Shruti Haasan</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/ece-vahapoğlu.webp" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Ece Vahapoğlu</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/demet-akalin.jpg" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Demet Akalin</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/razan-moughrabi.jpeg" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Razan Moughrabi</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/jennifer-esposito.jpg" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Jennifer Esposito</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/gwyneth-paltrow.jpg" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Gwyneth Paltrow</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/ryan-phillippe.jpg" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Ryan Phillippe</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/shatha-hassoun.png" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Shatha Hassoun</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
 
             </div>
         </div>
