Make the logo clickable as the website name

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
     <!-- Nav Bar inspired by BootStrap -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <img src="assets/images/logo.png" id="logo-image" alt="logo image beside website name">
-        <a class="navbar-brand alegreya-sans-sc-bold" href="#">GluteniPedia</a>
+        
+        <a class="navbar-brand alegreya-sans-sc-bold" href="#">
+          <img src="assets/images/logo.png" id="logo-image" alt="logo image beside website name">
+          <p>GluteniPedia</p></a>
 
 
         <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
