--- a/celebrities.html
+++ b/celebrities.html
@@ -36,8 +36,9 @@
         <!-- Nav Bar inspired by BootStrap -->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <img src="assets/images/logo.png" id="logo-image" alt="logo image beside website name">
-                <a class="navbar-brand alegreya-sans-sc-bold" href="#">GluteniPedia</a>
+                <a class="navbar-brand alegreya-sans-sc-bold" href="index.html">
+                    <img src="assets/images/logo.png" id="logo-image" alt="logo image beside website name">
+                    <p>GluteniPedia</p></a>
 
                 <input id="menu-button" type="checkbox">
                 <label for="menu-button"><span class="navbar-toggler-icon navbar-toggler"></span></label>
