Add content to recipes page

--- a/celebrities.html
+++ b/celebrities.html
@@ -113,20 +113,6 @@
                     <a href="https://www.Wikipedia.org" class="celebrity-link">
                         <div class="p-3 celebrity-card-container">
                             <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/bill-clinton.jpg" class="celebrity-img" alt="...">
-                                <div class="card-body">
-                                <h3 class="card-title dark-text">Bill Clinton</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-
-                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
-                        <div class="p-3 celebrity-card-container">
-                            <div class="card card-light celebrity-card">
                                 <img src="assets/images/celebrities/novak-djokovic.webp" class="celebrity-img" alt="...">
                                 <div class="card-body">
                                 <h3 class="card-title dark-text">Novak Djokovic</h3>
@@ -186,20 +172,6 @@
                                 <img src="assets/images/celebrities/sonam-kapoor.jpg" class="celebrity-img" alt="...">
                                 <div class="card-body">
                                 <h3 class="card-title dark-text">Sonam Kapoor</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-
-                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
-                    <a href="https://www.Wikipedia.org" class="celebrity-link">
-                        <div class="p-3 celebrity-card-container">
-                            <div class="card card-light celebrity-card">
-                                <img src="assets/images/celebrities/mike-pence.jpg" class="celebrity-img" alt="...">
-                                <div class="card-body">
-                                <h3 class="card-title dark-text">Mike Pence</h3>
                                 </div>
                             </div>
                         </div>
@@ -431,8 +403,22 @@
                     </a>
                 </div>
 
+                <div class="col-sm-12 col-md-6 col-lg-3 celebrity-div">
+                    <a href="https://www.Wikipedia.org" class="celebrity-link">
+                        <div class="p-3 celebrity-card-container">
+                            <div class="card card-light celebrity-card">
+                                <img src="assets/images/celebrities/farah.jpeg" class="celebrity-img" alt="...">
+                                <div class="card-body">
+                                <h3 class="card-title dark-text">Farah ElSharief</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
             </div>
         </div>
+
 
 
 
