--- a/diagnose.html
+++ b/diagnose.html
@@ -73,6 +73,11 @@
 
   <!-- Main Section -->
   <main>
+
+
+    <div class="container">
+      <div class="row g-2">
+        <div class="col-12">
     <div class="card card-light" id="card1">
       <img src="assets/images/Symptoms.webp" class="card-img-top" alt="...">
       <div class="card-body">
@@ -342,7 +347,10 @@
 
           </li>
         </ol>
+        </div>
+    </div>
 
+    </div>
 
 
       </div>
