--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- Header Section -->
   <header>
     <!-- Nav Bar inspired by BootStrap -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg container-fullwidth">
       <div class="container-fluid">
         
         <a class="navbar-brand alegreya-sans-sc-bold" href="#">
