--- a/recipes.html
+++ b/recipes.html
@@ -23,7 +23,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-      <!-- Linking CSS Styling -->
+  <!-- Linking CSS Styling -->
   <link rel="stylesheet" href="assets/css/style.css">
 
 
@@ -38,7 +38,8 @@
       <div class="container-fluid">
         <a class="navbar-brand alegreya-sans-sc-bold" href="index.html">
           <img src="assets/images/logo.png" id="logo-image" alt="logo image beside website name">
-          <p>GluteniPedia</p></a>
+          <p>GluteniPedia</p>
+        </a>
 
         <input id="menu-button" type="checkbox">
         <label for="menu-button"><span class="navbar-toggler-icon navbar-toggler"></span></label>
@@ -57,8 +58,8 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="celebrities.html">Celebrities</a>
-              </li>
+              <a class="nav-link" href="celebrities.html">Celebrities</a>
+            </li>
 
             <li class="nav-item">
               <a class="nav-link active" href="signup.html">SignUp</a>
@@ -72,45 +73,311 @@
 
   <!-- Main Section -->
   <main>
-    
-    </main>
+
+
+    <div class="container text-center">
+      <div class="row g-2">
+
+
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+          <a href="#" class="recipe-link">
+            <div class="p-3 recipe-card-container">
+              <div class="card card-light recipe-card">
+                <img src="assets/images/recipes/falafel.jpeg" class="recipe-img" alt="...">
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
+          <div class="card-body">
+            <h3 class="card-title dark-text">Falafel</h3>
+            <p> This recipe is for falafel in details</p>
+          </div>
+        </div>
+
+
+
+
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+          <a href="#" class="recipe-link">
+            <div class="p-3 recipe-card-container">
+              <div class="card card-light recipe-card">
+                <img src="assets/images/recipes/rec1.jpg" class="recipe-img" alt="...">
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
+          <div class="card-body">
+            <h3 class="card-title dark-text">Falafel</h3>
+            <p> This recipe is for falafel in details</p>
+          </div>
+        </div>
+
+
+
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+          <a href="#" class="recipe-link">
+            <div class="p-3 recipe-card-container">
+              <div class="card card-light recipe-card">
+                <img src="assets/images/recipes/rec2.jpg" class="recipe-img" alt="...">
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
+          <div class="card-body">
+            <h3 class="card-title dark-text">Falafel</h3>
+            <p> This recipe is for falafel in details</p>
+          </div>
+        </div>
+
+
+
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+          <a href="#" class="recipe-link">
+            <div class="p-3 recipe-card-container">
+              <div class="card card-light recipe-card">
+                <img src="assets/images/recipes/rec3.jpg" class="recipe-img" alt="...">
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
+          <div class="card-body">
+            <h3 class="card-title dark-text">Falafel</h3>
+            <p> This recipe is for falafel in details</p>
+          </div>
+        </div>
+
+
+
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+          <a href="#" class="recipe-link">
+            <div class="p-3 recipe-card-container">
+              <div class="card card-light recipe-card">
+                <img src="assets/images/recipes/rec4.jpg" class="recipe-img" alt="...">
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
+          <div class="card-body">
+            <h3 class="card-title dark-text">Falafel</h3>
+            <p> This recipe is for falafel in details</p>
+          </div>
+        </div>
+
+
+
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+          <a href="#" class="recipe-link">
+            <div class="p-3 recipe-card-container">
+              <div class="card card-light recipe-card">
+                <img src="assets/images/recipes/rec5.jpg" class="recipe-img" alt="...">
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
+          <div class="card-body">
+            <h3 class="card-title dark-text">Falafel</h3>
+            <p> This recipe is for falafel in details</p>
+          </div>
+        </div>
+
+
+
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+          <a href="#" class="recipe-link">
+            <div class="p-3 recipe-card-container">
+              <div class="card card-light recipe-card">
+                <img src="assets/images/recipes/rec6.jpg" class="recipe-img" alt="...">
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
+          <div class="card-body">
+            <h3 class="card-title dark-text">Falafel</h3>
+            <p> This recipe is for falafel in details</p>
+          </div>
+        </div>
+
+
+
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+          <a href="#" class="recipe-link">
+            <div class="p-3 recipe-card-container">
+              <div class="card card-light recipe-card">
+                <img src="assets/images/recipes/rec7.jpg" class="recipe-img" alt="...">
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
+          <div class="card-body">
+            <h3 class="card-title dark-text">Falafel</h3>
+            <p> This recipe is for falafel in details</p>
+          </div>
+        </div>
+
+
+
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+          <a href="#" class="recipe-link">
+            <div class="p-3 recipe-card-container">
+              <div class="card card-light recipe-card">
+                <img src="assets/images/recipes/rec8.jpg" class="recipe-img" alt="...">
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
+          <div class="card-body">
+            <h3 class="card-title dark-text">Falafel</h3>
+            <p> This recipe is for falafel in details</p>
+          </div>
+        </div>
+
+
+
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+          <a href="#" class="recipe-link">
+            <div class="p-3 recipe-card-container">
+              <div class="card card-light recipe-card">
+                <img src="assets/images/recipes/rec9.jpg" class="recipe-img" alt="...">
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
+          <div class="card-body">
+            <h3 class="card-title dark-text">Falafel</h3>
+            <p> This recipe is for falafel in details</p>
+          </div>
+        </div>
+
+
+
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+          <a href="#" class="recipe-link">
+            <div class="p-3 recipe-card-container">
+              <div class="card card-light recipe-card">
+                <img src="assets/images/recipes/rec10.jpg" class="recipe-img" alt="...">
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
+          <div class="card-body">
+            <h3 class="card-title dark-text">Falafel</h3>
+            <p> This recipe is for falafel in details</p>
+          </div>
+        </div>
+
+
+
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+          <a href="#" class="recipe-link">
+            <div class="p-3 recipe-card-container">
+              <div class="card card-light recipe-card">
+                <img src="assets/images/recipes/rec11.jpg" class="recipe-img" alt="...">
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
+          <div class="card-body">
+            <h3 class="card-title dark-text">Falafel</h3>
+            <p> This recipe is for falafel in details</p>
+          </div>
+        </div>
+
+
+
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+          <a href="#" class="recipe-link">
+            <div class="p-3 recipe-card-container">
+              <div class="card card-light recipe-card">
+                <img src="assets/images/recipes/rec12.jpg" class="recipe-img" alt="...">
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
+          <div class="card-body">
+            <h3 class="card-title dark-text">Falafel</h3>
+            <p> This recipe is for falafel in details</p>
+          </div>
+        </div>
+
+
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+          <a href="#" class="recipe-link">
+            <div class="p-3 recipe-card-container">
+              <div class="card card-light recipe-card">
+                <img src="assets/images/recipes/rec13.jpg" class="recipe-img" alt="...">
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
+          <div class="card-body">
+            <h3 class="card-title dark-text">Falafel</h3>
+            <p> This recipe is for falafel in details</p>
+          </div>
+        </div>
+
+
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3 celebrity-div">
+          <a href="#" class="recipe-link">
+            <div class="p-3 recipe-card-container">
+              <div class="card card-light recipe-card">
+                <img src="assets/images/recipes/rec14.jpg" class="recipe-img" alt="...">
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-6 col-sm-6 col-md-6 col-lg-3">
+          <div class="card-body">
+            <h3 class="card-title dark-text">Falafel</h3>
+            <p> This recipe is for falafel in details</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </main>
 
   <!-- Footer -->
   <footer>
     <ul id="footer-bar">
       <li>
-        <a href="#" rel="noopener"
-          aria-label="">
+        <a href="#" rel="noopener" aria-label="">
           About</a>
       </li>
 
       <li>
-        <a href="#"  rel="noopener"
-          aria-label="">
+        <a href="#" rel="noopener" aria-label="">
           Contact Us</a>
       </li>
 
       <li>
-        <a href="#"  rel="noopener"
-          aria-label="">
+        <a href="#" rel="noopener" aria-label="">
           Conditions and Terms</a>
       </li>
 
       <li>
-        <a href="#" rel="noopener"
-          aria-label="">
+        <a href="#" rel="noopener" aria-label="">
           Privacy Policy</a>
       </li>
     </ul>
   </footer>
 
-      <!-- Font Awesome kit -->
-      <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
+  <!-- Font Awesome kit -->
+  <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 
 </body>
 
 </html>
-
-
-
-
